# game-map-tracker-rs

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: rocom-bwiki-map.md
experiments/f1p_label_detector_py/: README.md  detector.py
experiments/f1p_label_detector_py/artifacts/: evaluation_report.json  evaluation_report_full.json  evaluation_report_real_assets_test.json  f1p_tag_model.npz
models/: tracker_encoder.safetensors
scripts/: Invoke-CudaCargo.ps1  build-cuda.ps1  sync-bwiki-rocom-tiles.mjs  sync-bwiki-rocom.mjs
src/: embedded_assets.rs  error.rs  lib.rs  logging.rs  main.rs  model_assets.rs
src/app/: mod.rs
src/config/: mod.rs
src/domain/: geometry.rs  marker.rs  mod.rs  route.rs  theme.rs  tracker.rs
src/resources/: bootstrap.rs  bwiki.rs  mod.rs  preferences.rs  routes.rs  workspace.rs
src/tracking/: ai.rs  burn_support.rs  candle_support.rs  capture.rs  debug.rs  mod.rs  precompute.rs  presence.rs  runtime.rs  template.rs  test_support.rs  vision.rs
src/ui/: map_canvas.rs  mod.rs  tile_cache.rs
src/ui/workbench/: capture_utils.rs  debug_images.rs  forms.rs  minimap_picker.rs  mod.rs  page.rs  panels.rs  picker_geometry.rs  picker_shared.rs  probe_region_picker.rs  probe_region_review.rs  select.rs  theme.rs  tracker_pip.rs
