[package]
build = "build.rs"
description = "Pure Rust desktop refactor of Game Map Tracker with GPUI."
name = "game-map-tracker-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["ai-candle"]
ai-candle = ["dep:candle-core", "dep:candle-nn"]

[dependencies]
anyhow = "1.0"
candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
crossbeam-channel = "0.5"
derive_more = { version = "2.0", features = ["display", "from"] }
directories = "6.0"
gpui = "0.2.2"
gpui-component = "0.5.1"
image = "0.25"
imageproc = "0.25"
parking_lot = "0.12"
rayon = "1.10"
rfd = "0.15"
schemars = "1.0"
screenshots = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
