[package]
build = "build.rs"
description = "Pure Rust desktop refactor of Game Map Tracker with GPUI."
name = "game-map-tracker-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["ai-burn"]
ai-burn = ["dep:burn", "dep:safetensors"]

[dependencies]
anyhow = "1.0"
burn = { version = "0.21.0-pre.3", optional = true, default-features = false, features = ["std", "ndarray"] }
crossbeam-channel = "0.5"
derive_more = { version = "2.0", features = ["display", "from"] }
directories = "6.0"
futures-util = "0.3"
gpui = "0.2.2"
gpui-component = "0.5.1"
image = "0.25"
imageproc = "0.25"
parking_lot = "0.12"
raw-window-handle = "0.6"
rayon = "1.10"
regex = "1.11"
rfd = "0.15"
schemars = "1.0"
screenshots = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = { version = "0.4", optional = true }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ureq = "2.12"
uuid = { version = "1.18", features = ["v4", "serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
burn = { version = "0.21.0-pre.3", optional = true, default-features = false, features = ["std", "ndarray", "cuda", "vulkan"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
burn = { version = "0.21.0-pre.3", optional = true, default-features = false, features = ["std", "ndarray", "metal"] }

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
burn = { version = "0.21.0-pre.3", optional = true, default-features = false, features = ["std", "ndarray", "vulkan"] }

[patch.crates-io]
cubecl-wgpu = { path = "vendor/cubecl-wgpu-0.10.0-pre.3" }
