[package]
build = "build.rs"
description = "Pure Rust desktop refactor of Game Map Tracker with GPUI."
name = "game-map-tracker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
burn = { version = "0.21.0-pre.3", default-features = false, features = ["std", "ndarray", "autodiff"] }
cubecl-runtime = "0.10.0-pre.3"
cubecl-wgpu = "0.10.0-pre.3"
crossbeam-channel = "0.5.15"
derive_more = { version = "2.1.1", features = ["display", "from"] }
directories = "6.0.0"
futures-util = "0.3.32"
gpui = "0.2.2"
gpui-component = "0.5.1"
image = "0.25.10"
imageproc = "0.26.1"
parking_lot = "0.12.5"
raw-window-handle = "0.6.2"
rayon = "1.12.0"
regex = "1.12.3"
rfd = "0.17.2"
schemars = "1.2.1"
screenshots = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
safetensors = { version = "0.7.0" }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
ureq = "3.3.0"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
burn = { version = "0.21.0-pre.3", default-features = false, features = ["std", "ndarray", "autodiff", "cuda", "vulkan"] }
cubecl-cuda = "0.10.0-pre.3"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
burn = { version = "0.21.0-pre.3", default-features = false, features = ["std", "ndarray", "autodiff", "metal"] }

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
burn = { version = "0.21.0-pre.3", default-features = false, features = ["std", "ndarray", "autodiff", "vulkan"] }

[patch.crates-io]
cubecl-wgpu = { path = "vendor/cubecl-wgpu-0.10.0-pre.3" }
